; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/utils/mmgr/extr_dsa.c_dsa_attach.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/utils/mmgr/extr_dsa.c_dsa_attach.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR = common dso_local global i32 0, align 4
@ERRCODE_OBJECT_NOT_IN_PREREQUISITE_STATE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [40 x i8] c"could not attach to dynamic shared area\00", align 1
@dsa_on_dsm_detach_release_in_place = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @dsa_attach(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  store i32 %0, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = call i32* @dsm_attach(i32 %5)
  store i32* %6, i32** %3, align 8
  %7 = load i32*, i32** %3, align 8
  %8 = icmp eq i32* %7, null
  br i1 %8, label %9, label %15

9:                                                ; preds = %1
  %10 = load i32, i32* @ERROR, align 4
  %11 = load i32, i32* @ERRCODE_OBJECT_NOT_IN_PREREQUISITE_STATE, align 4
  %12 = call i32 @errcode(i32 %11)
  %13 = call i32 @errmsg(i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str, i64 0, i64 0))
  %14 = call i32 @ereport(i32 %10, i32 %13)
  br label %15

15:                                               ; preds = %9, %1
  %16 = load i32*, i32** %3, align 8
  %17 = call i32 @dsm_segment_address(i32* %16)
  %18 = load i32*, i32** %3, align 8
  %19 = load i32, i32* %2, align 4
  %20 = call i32* @attach_internal(i32 %17, i32* %18, i32 %19)
  store i32* %20, i32** %4, align 8
  %21 = load i32*, i32** %3, align 8
  %22 = load i32*, i32** %3, align 8
  %23 = call i32 @dsm_segment_address(i32* %22)
  %24 = call i32 @PointerGetDatum(i32 %23)
  %25 = call i32 @on_dsm_detach(i32* %21, i32* @dsa_on_dsm_detach_release_in_place, i32 %24)
  %26 = load i32*, i32** %4, align 8
  ret i32* %26
}

declare dso_local i32* @dsm_attach(i32) #1

declare dso_local i32 @ereport(i32, i32) #1

declare dso_local i32 @errcode(i32) #1

declare dso_local i32 @errmsg(i8*) #1

declare dso_local i32* @attach_internal(i32, i32*, i32) #1

declare dso_local i32 @dsm_segment_address(i32*) #1

declare dso_local i32 @on_dsm_detach(i32*, i32*, i32) #1

declare dso_local i32 @PointerGetDatum(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
